test_results/model_comparison_20251206_171828_report.txt
================================================================================
ROOT AGENT MULTI-MODEL TEST REPORT
================================================================================

Test Name: model_comparison_20251206_171828
Timestamp: 20251206_171828
Repository: psf/requests

Test Issue: Leading slash in uri followed by column fails
Issue URL: https://github.com/psf/requests/issues/6643
Issue ID: 6643

Issue Description:
--------------------------------------------------------------------------------
Leading slash in uri followed by column fails.

## Expected Result

```python
requests.get('http://127.0.0.1:10000//v:h')
<Response [200]>
```

## Actual Result

```python
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 425, in parse_url
    host, port = _HOST_PORT_RE.match(host_port).groups()  # type: ignore[union-attr]
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'groups'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 73, in get
    return request("get", url, params=params, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 59, in request
    return session.request(method=method, url=url, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/adapters.py", line 486, in send
    resp = conn.urlopen(
           ^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/connectionpool.py", line 711, in urlopen
    parsed_url = parse_url(url)
                 ^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 451, in parse_url
    raise LocationParseError(source_url) from e
urllib3.exceptions.LocationParseError: Failed to parse: //v:h
```

## Reproduction Steps

```python
import requests
requests.get('http://127.0.0.1:10000//v:h')

```

## System Information

    $ python -m requests.help

```json
{
  "chardet": {
    "version": null
  },
  "charset_normalizer": {
    "version": "3.3.2"
  },
  "cryptography": {
    "version": ""
  },
  "idna": {
    "version": "3.6"
  },
  "implementation": {
    "name": "CPython",
    "version": "3.11.8"
  },
  "platform": {
    "release": "5.10.209-198.812.amzn2.x86_64",
    "system": "Linux"
  },
  "pyOpenSSL": {
    "openssl_version": "",
    "version": null
  },
  "requests": {
    "version": "2.31.0"
  },
  "system_ssl": {
    "version": "300000b0"
  },
  "urllib3": {
    "version": "2.2.1"
  },
  "using_charset_normalizer": true,
  "using_pyopenssl": false
}
```

<!-- This command is only available on Requests v2.16.4 and greater. Otherwise,
please provide some basic information about your system (Python version,
operating system, &c). -->


================================================================================
QUERY USED FOR TESTING
================================================================================

Issue Title: Leading slash in uri followed by column fails

Issue Description:
Leading slash in uri followed by column fails.

## Expected Result

```python
requests.get('http://127.0.0.1:10000//v:h')
<Response [200]>
```

## Actual Result

```python
Traceback (most recent call last):
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 425, in parse_url
    host, port = _HOST_PORT_RE.match(host_port).groups()  # type: ignore[union-attr]
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
AttributeError: 'NoneType' object has no attribute 'groups'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 73, in get
    return request("get", url, params=params, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/api.py", line 59, in request
    return session.request(method=method, url=url, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 589, in request
    resp = self.send(prep, **send_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/sessions.py", line 703, in send
    r = adapter.send(request, **kwargs)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/requests/adapters.py", line 486, in send
    resp = conn.urlopen(
           ^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/connectionpool.py", line 711, in urlopen
    parsed_url = parse_url(url)
                 ^^^^^^^^^^^^^^
  File "/usr/local/lib/python3.11/site-packages/urllib3/util/url.py", line 451, in parse_url
    raise LocationParseError(source_url) from e
urllib3.exceptions.LocationParseError: Failed to parse: //v:h
```

## Reproduction Steps

```python
import requests
requests.get('http://127.0.0.1:10000//v:h')

```

## System Information

    $ python -m requests.help

```json
{
  "chardet": {
    "version": null
  },
  "charset_normalizer": {
    "version": "3.3.2"
  },
  "cryptography": {
    "version": ""
  },
  "idna": {
    "version": "3.6"
  },
  "implementation": {
    "name": "CPython",
    "version": "3.11.8"
  },
  "platform": {
    "release": "5.10.209-198.812.amzn2.x86_64",
    "system": "Linux"
  },
  "pyOpenSSL": {
    "openssl_version": "",
    "version": null
  },
  "requests": {
    "version": "2.31.0"
  },
  "system_ssl": {
    "version": "300000b0"
  },
  "urllib3": {
    "version": "2.2.1"
  },
  "using_charset_normalizer": true,
  "using_pyopenssl": false
}
```

<!-- This command is only available on Requests v2.16.4 and greater. Otherwise,
please provide some basic information about your system (Python version,
operating system, &c). -->



================================================================================
MODEL 1: kwaipilot/kat-coder-pro:free
================================================================================

Status: ✓ SUCCESS

Result Length: 9173 characters

Full Result:
--------------------------------------------------------------------------------
# GitHub Issue Analysis and Solution

## Issue Summary

**Title:** Leading slash in URI followed by colon fails

**Problem:** When making a request with a URL containing a double slash followed by a colon (e.g., `http://127.0.0.1:10000//v:h`), the request fails with a `LocationParseError` from urllib3.

**Error Trace:**
```
urllib3.exceptions.LocationParseError: Failed to parse: //v:h
```

**Root Cause:** The issue occurs in urllib3's URL parsing logic when it encounters a path component that starts with `//` followed by a colon. The regex pattern used to parse host:port combinations fails to match this pattern, resulting in a `None` value that causes an `AttributeError` when trying to call `.groups()`.

**Affected Files:**
- `psf/requests/src/requests/models.py` (request handling)
- `psf/requests/src/requests/utils.py` (URL utilities)

## Root Cause Analysis

The issue stems from how urllib3 parses URLs when they contain unusual path patterns. When a URL like `http://127.0.0.1:10000//v:h` is processed:

1. The scheme (`http`) and netloc (`127.0.0.1:10000`) are correctly identified
2. The path component becomes `//v:h`
3. urllib3's `_HOST_PORT_RE` regex pattern attempts to parse this as a host:port combination
4. Since `//v:h` doesn't match the expected host:port pattern, the regex returns `None`
5. The code attempts to call `.groups()` on `None`, causing the `AttributeError`

## Proposed Solution

The solution involves modifying the URL parsing logic in Requests to properly handle edge cases where the path component might be misinterpreted as a host:port combination.

### Code Changes

**File:** `psf/requests/src/requests/models.py`

We need to add URL validation and normalization before passing the URL to urllib3:

```python
# Add this function near the top of the file, after imports
def _normalize_url(url):
    """
    Normalize URLs to prevent parsing issues with unusual path patterns.
    
    Specifically handles cases where paths starting with '//' followed by
    a colon might be misinterpreted as host:port combinations.
    """
    from urllib.parse import urlparse, urlunparse
    
    parsed = urlparse(url)
    
    # Check if the path starts with '//' followed by a colon
    # This pattern can confuse urllib3's host:port parsing
    if parsed.path and parsed.path.startswith('//') and ':' in parsed.path[2:5]:
        # Replace the problematic pattern with a safe alternative
        # We'll URL-encode the colon to prevent misinterpretation
        path_parts = parsed.path.split(':', 1)
        if len(path_parts) > 1:
            safe_path = path_parts[0] + '%3A' + path_parts[1]
            parsed = parsed._replace(path=safe_path)
    
    return urlunparse(parsed)

# Modify the prepare_url method in the PreparedRequest class
# Find the prepare_url method and update it as follows:
def prepare_url(self, url, params):
    """Prepares the given HTTP URL."""
    #: Accept objects that have string representations.
    #: We're unable to blindly call unicode/str functions
    #: as this will include the bytestring indicator (b'')
    #: on python 3.x.
    #: https://github.com/psf/requests/pull/2238
    if isinstance(url, bytes):
        url = url.decode("utf8")
    else:
        url = str(url)

    # Remove leading/trailing whitespace from the URL
    url = url.strip()

    # Normalize the URL to handle edge cases
    url = _normalize_url(url)

    # Ensure we have a valid URL
    if not url:
        error = "Invalid URL {0!r}: No schema supplied. Perhaps you meant https://{0}?"
        error = error.format(to_native_string(url))
        raise MissingSchema(error)

    # Don't do any URL preparation for non-HTTP schemes like `mailto`,
    # `data` etc. to work around exceptions from `url_parse`, which
    # handles RFC 3986 only.
    if ":" in url and not url.lower().startswith("http"):
        self.url = url
        return

    # Support for unicode domain names and paths.
    try:
        scheme, auth, host, port, path, query, fragment = parse_url(url)
    except LocationParseError as e:
        raise InvalidURL(*e.args)
    
    if not scheme:
        error = "Invalid URL {0!r}: No schema supplied. Perhaps you meant https://{0}?"
        error = error.format(to_native_string(url))
        raise MissingSchema(error)

    if not host:
        raise InvalidURL("Invalid URL %r: No host supplied" % url)

    # In general, we want to try IDNA encoding the hostname if the string contains
    # non-ASCII characters. This allows users to automatically get the correct IDNA
    # behaviour. For strings containing only ASCII characters, we need to also verify
    # it doesn't start with a wildcard (*), before allowing the unencoded hostname.
    if not isinstance(host, bytes):
        try:
            host = host.encode("ascii").decode("ascii")
        except UnicodeError:
            host = idna_encode(host)

    # Carefully reconstruct the network location
    netloc = auth or ""
    if netloc:
        netloc += "@"
    netloc += host
    if port:
        netloc += ":" + str(port)

    # Bare domains aren't valid URLs.
    if not path:
        path = "/"

    if is_py2:
        if isinstance(scheme, str):
            scheme = scheme.encode("utf-8")
        if isinstance(netloc, str):
            netloc = netloc.encode("utf-8")
        if isinstance(path, str):
            path = path.encode("utf-8")
        if isinstance(query, str):
            query = query.encode("utf-8")
        if isinstance(fragment, str):
            fragment = fragment.encode("utf-8")

    if isinstance(params, (str, bytes)):
        params = to_native_string(params)
    enc_params = self._encode_params(params)
    if enc_params:
        if query:
            query = "%s&%s" % (query, enc_params)
        else:
            query = enc_params

    url = requote_uri(urlunparse([scheme, netloc, path, None, query, fragment]))
    self.url = url
```

**File:** `psf/requests/src/requests/utils.py`

Add the IDNA encoding function if it doesn't exist:

```python
# Add this import at the top of the file
try:
    import idna
except ImportError:
    idna = None

# Add this function if it doesn't already exist
def idna_encode(name):
    """
    Encodes a hostname to IDNA format. This is a wrapper around the idna
    library that handles the case where the idna library is not installed.
    """
    if idna is None:
        raise ImportError(
            "The 'idna' library is required to encode non-ASCII domain names. "
            "Install it with 'pip install requests[idna]' or 'pip install idna'."
        )
    
    return idna.encode(name.lower()).decode("ascii")
```

## Implementation Steps

1. **Backup the original files** before making any changes

2. **Update `models.py`:**
   - Add the `_normalize_url()` helper function
   - Modify the `prepare_url()` method to use URL normalization
   - Ensure proper imports are in place

3. **Update `utils.py`:**
   - Add the `idna_encode()` function if it doesn't exist
   - Add proper imports for idna handling

4. **Test the changes:**
   ```python
   import requests
   
   # Test the original failing case
   response = requests.get('http://127.0.0.1:10000//v:h')
   print(response.status_code)
   
   # Test other edge cases
   test_urls = [
       'http://example.com//path:with:colons',
       'https://test.com//a:b:c',
       'http://localhost:8080//file:name.txt'
   ]
   
   for url in test_urls:
       try:
           response = requests.get(url, timeout=5)
           print(f"✓ {url} - Success")
       except Exception as e:
           print(f"✗ {url} - Error: {e}")
   ```

5. **Run the existing test suite** to ensure no regressions

## Potential Side Effects and Considerations

1. **URL Encoding Changes:** The solution URL-encodes colons in problematic path patterns, which might change the semantics of the request from the server's perspective.

2. **Backward Compatibility:** This change could potentially affect existing code that relies on the current (broken) behavior, though such code would already be failing.

3. **Performance Impact:** The additional URL parsing and normalization adds minimal overhead to each request.

4. **Server Compatibility:** Some servers might expect the literal colon character and not handle the URL-encoded version (`%3A`) correctly.

5. **Alternative Approach:** Instead of URL-encoding, we could also consider:
   - Adding the normalization only for the specific problematic pattern
   - Using a different normalization strategy
   - Adding a configuration option to enable/disable this behavior

## Recommendation

This solution provides a robust fix for the immediate issue while maintaining backward compatibility for valid URLs. The URL-encoding approach is safe and follows web standards. However, it's recommended to:

1. Test thoroughly with your specific use cases
2. Monitor for any server-side issues related to URL-encoded colons
3. Consider adding configuration options if this behavior needs to be customizable

The fix addresses the root cause by preventing the problematic URL pattern from reaching urllib3's parsing logic, thus avoiding the `LocationParseError`.

================================================================================
MODEL 2: qwen/qwen3-coder:free
================================================================================

Status: ✗ ERROR

Error: Error code: 429 - {'error': {'message': 'Provider returned error', 'code': 429, 'metadata': {'raw': 'qwen/qwen3-coder:free is temporarily rate-limited upstream. Please retry shortly, or add your own key to accumulate your rate limits: https://openrouter.ai/settings/integrations', 'provider_name': 'Chutes'}}, 'user_id': 'user_32izgjWarmbC1dp956etbTly9VB'}

================================================================================
MODEL 3: nvidia/nemotron-nano-9b-v2:free
================================================================================

Status: ✓ SUCCESS

Result Length: 2543 characters

Full Result:
--------------------------------------------------------------------------------
### Root Cause Analysis
The error occurs because the URL `http://127.0.0.1:10000//v:h` contains **redundant slashes (`//`)** after the port (`10000`), which breaks urllib3's URL parsing logic. Specifically, the regex pattern in `urllib3/util/url.py` (line 425) fails to match the host/port component correctly when the path starts with `//`. This results in a `NoneType` error when attempting to extract host/port details.

---

### Proposed Code Changes
The fix requires **normalizing the URL** before passing it to `requests.get()` to ensure only **single slashes** in the path. No changes to the `requests` or `urllib3` libraries are needed if the URL is preprocessed.

**Affected File Paths**:  
- Likely in the application code where the URL `http://127.0.0.1:10000//v:h` is constructed (not in the provided snippets).

---

### Implementation Steps
1. **Locate URL Construction**:  
   Identify where the URL `http://127.0.0.1:10000//v:h` is built (e.g., in a view, API endpoint, or configuration).

2. **Normalize the URL**:  
   Replace `//` with `/` in the path component after the port. For example:
   ```python
   # Before
   url = f"http://127.0.0.1:10000//v:h"

   # After
   url = f"http://127.0.0.1:10000/v:h"  # Single slash
   ```

3. **Generalize Normalization (Optional)**:  
   Add a helper function to sanitize URLs dynamically:
   ```python
   def normalize_url(url: str) -> str:
       # Split URL into components
       parsed = urlparse(url)
       # Replace multiple slashes with a single slash in the path
       path = parsed.path.replace('//', '/')
       # Rebuild the URL
       return urlparse.urlunparse((parsed.scheme, parsed.netloc, path, parsed.params, parsed.query, parsed.fragment))

   # Usage
   url = normalize_url("http://127.0.0.1:10000//v:h")  # Returns "http://127.0.0.1:10000/v:h"
   ```

4. **Test the Fix**:  
   Verify that `requests.get(normalized_url)` works without errors.

---

### Potential Side Effects
- **Edge Cases**: If the server intentionally expects `//` in the path (unlikely), this fix may break functionality. Test thoroughly.
- **URL Validity**: Ensure the normalized URL adheres to the server's requirements (e.g., trailing slashes).

---

### Summary
**Fix**: Normalize URLs to remove redundant slashes (`//`) in the path.  
**Location**: In the application code where URLs are constructed.  
**Impact**: Resolves parsing issues without modifying third-party libraries like `requests` or `urllib3`.  
**Testing**: Validate with various URL structures to ensure robustness.


================================================================================
MODEL 4: google/gemma-3-27b-it:free
================================================================================

Status: ✓ SUCCESS

Result Length: 2409 characters

Full Result:
--------------------------------------------------------------------------------

## Analysis and Solution for Leading Slash in URI Issue

**1. Issue Summary:**

The issue occurs when a `requests.get` call is made with a URI containing a leading slash after the domain and port (e.g., `http://127.0.0.1:10000//v:h`). This results in a `urllib3.exceptions.LocationParseError` because the `urllib3` library's `parse_url` function fails to correctly parse the double slash. The traceback indicates the error originates within `urllib3` when attempting to extract the host and port.

**2. Root Cause:**

The root cause is that `urllib3`'s `parse_url` function doesn't handle URLs with a double slash (`//`) immediately following the port number. It expects a path segment after the port, or at least a single slash. The double slash causes the parsing logic to fail, specifically in the `_HOST_PORT_RE.match(host_port)` part, leading to a `NoneType` error when trying to access the `groups()` attribute of the match object.  The requests library relies on `urllib3` for URL parsing and handling.

**3. Affected File Paths:**

*   `psf/requests/src/requests/api.py` (requests library's main API)
*   `psf/requests/src/requests/sessions.py` (requests session management)
*   `psf/requests/src/requests/adapters.py` (requests adapter for urllib3)
*   `urllib3/util/url.py` (urllib3's URL parsing logic - the source of the error)

**4. Proposed Solution:**

The most robust solution is to normalize the URL *before* passing it to `urllib3`. This involves removing the redundant slash.  We can achieve this by adding a check and replacement within the `requests.api.request` function.  This ensures that even if a user provides a malformed URL, the library attempts to correct it before passing it to the lower-level `urllib3` library.

**5. Code Changes:**

Modify `psf/requests/src/requests/api.py` as follows:

```python
from requests.sessions import Session
from urllib3.util.url import parse_url

def request(method, url, params=None, data=None, headers=None, cookies=None,
            files=None, auth=None, timeout=None, allow_redirects=True,
            proxies=None, hooks=None, stream=None, cert=None, json=None):
    """Constructs and sends a :class:`Request <Request>`.

    :param method: The HTTP method to use.
    :param url: The URL to request.
    :param params: (optional) Dictionary or bytes to be sent in the query string.
    :param data: (optional) Dictionary, list of tuples,

================================================================================
